--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "visualization of import export data for the NEB",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha-webpack --watch",
     "webpack": "webpack --config webpack.prod.config.js",
     "start": "node servers/DevelopmentServer/DevelopmentServer.js",
     "lint": "eslint --ext .jsx,.js app/**",
@@ -52,7 +52,13 @@
     "webpack-hot-middleware": "^2.18.2"
   },
   "devDependencies": {
+    "chai": "^4.1.2",
+    "chai-enzyme": "^0.8.0",
+    "enzyme": "^3.2.0",
+    "enzyme-adapter-react-15": "^1.0.5",
     "eslint": "^4.3.0",
-    "eslint-plugin-react": "^7.1.0"
+    "eslint-plugin-react": "^7.1.0",
+    "mocha": "^4.0.1",
+    "mocha-webpack": "^1.0.1"
   }
 }
