--- a/package.json
+++ b/package.json
@@ -38,8 +38,8 @@
     "node-sass": "^4.5.3",
     "nsp": "^2.7.0",
     "query-string": "^5.0.0",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
+    "react": "^16.1.1",
+    "react-dom": "^16.1.1",
     "react-hot-loader": "^1.3.1",
     "react-redux": "^5.0.5",
     "redux": "^3.7.2",
@@ -53,12 +53,12 @@
   },
   "devDependencies": {
     "chai": "^4.1.2",
-    "chai-enzyme": "^0.8.0",
     "enzyme": "^3.2.0",
-    "enzyme-adapter-react-15": "^1.0.5",
+    "enzyme-adapter-react-16": "^1.1.0",
     "eslint": "^4.3.0",
     "eslint-plugin-react": "^7.1.0",
     "mocha": "^4.0.1",
-    "mocha-webpack": "^1.0.1"
+    "mocha-webpack": "^1.0.1",
+    "react-test-renderer": "^16.1.1"
   }
 }
