--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "visualization of import export data for the NEB",
   "main": "index.js",
   "scripts": {
-    "test": "mocha-webpack --watch",
+    "test": "mocha-webpack --watch --recursive ./test/",
     "webpack": "webpack --config webpack.prod.config.js",
     "start": "node servers/DevelopmentServer/DevelopmentServer.js",
     "lint": "eslint --ext .jsx,.js app/**",
