--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "enzyme-adapter-react-16": "^1.1.0",
     "eslint": "^4.3.0",
     "eslint-plugin-react": "^7.1.0",
+    "fs-extra": "^5.0.0",
     "mocha": "^4.0.1",
     "mocha-webpack": "^1.0.1",
     "react-test-renderer": "^16.1.1"
