--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "browser-cookies": "^1.1.0",
     "client-request": "^2.0.0",
     "css-loader": "^0.28.4",
+    "d3": "4.12.0",
     "domready": "^1.0.8",
     "dot-env": "0.0.1",
     "dotenv": "^4.0.0",
@@ -40,6 +41,7 @@
     "query-string": "^5.0.0",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
+    "react-faux-dom": "4.1.0",
     "react-hot-loader": "^1.3.1",
     "react-redux": "^5.0.5",
     "redux": "^3.7.2",
