--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-hot-loader": "^3.1.3",
     "react-redux": "^5.0.5",
     "redux": "^3.7.2",
+    "reselect": "^3.0.1",
     "sass-loader": "^6.0.6",
     "should": "^11.2.1",
     "style-loader": "^0.18.2",
