--- a/package.json
+++ b/package.json
@@ -57,8 +57,11 @@
     "csv-parse": "^2.0.0",
     "enzyme": "^3.2.0",
     "enzyme-adapter-react-16": "^1.1.0",
-    "eslint": "^4.3.0",
-    "eslint-plugin-react": "^7.1.0",
+    "eslint": "^4.15.0",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.5.1",
     "fs-extra": "^5.0.0",
     "mocha": "^4.0.1",
     "mocha-webpack": "^1.0.1",
