--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "mustache-express": "^1.2.5",
     "node-sass": "^4.5.3",
     "nsp": "^2.7.0",
+    "prop-types": "^15.6.0",
     "query-string": "^5.0.0",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
