--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "webpack-hot-middleware": "^2.18.2"
   },
   "devDependencies": {
+    "babel-preset-stage-2": "^6.24.1",
     "chai": "^4.1.2",
     "csv-parse": "^2.0.0",
     "enzyme": "^3.2.0",
