--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
   "license": "Open Government Liscense - Canada",
   "dependencies": {
     "ajv": "^5.2.2",
-    "babel-cli": "^6.24.1",
-    "babel-core": "^6.25.0",
-    "babel-loader": "^7.1.1",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
     "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.6.0",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "bluebird": "^3.5.0",
     "browser-cookies": "^1.1.0",
@@ -54,6 +54,7 @@
     "webpack-hot-middleware": "^2.18.2"
   },
   "devDependencies": {
+    "babel-eslint": "^8.2.1",
     "babel-preset-stage-2": "^6.24.1",
     "chai": "^4.1.2",
     "csv-parse": "^2.0.0",
