--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,7 @@ LAST_MODIFIED
 VERSION
 import-export-visualization.sublime-workspace
 app/App.sublime-workspace
+srcData/geo2topo.json
+srcData/shp2json.json
+srcData/topoquantize.json
+srcData/toposimplify.json
