--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
   "description": "visualization of import export data for the NEB",
   "main": "index.js",
   "scripts": {
+    "build:portmap:shp2json": "shp2json -n ./srcData/gpr_000b11a_e.shp -o ./srcData/shp2json.json",
+    "build:portmap:geo2topo": "geo2topo -n regions=./srcData/shp2json.json -o ./srcData/geo2topo.json",
+    "build:portmap:toposimplify": "toposimplify -n -S 1e-3 -F ./srcData/geo2topo.json -o ./srcData/toposimplify.json",
+    "build:portmap:topoquantize": "topoquantize -n -o ./srcData/topoquantize.json 1e3 ./srcData/toposimplify.json",
+    "build:portmap": "npm run build:portmap:shp2json && npm run build:portmap:geo2topo && npm run build:portmap:toposimplify && npm run build:portmap:topoquantize && cp ./srcData/topoquantize.json ./public/data/topo.json",
     "test": "mocha-webpack --watch --recursive ./test/",
     "webpack": "webpack --config webpack.prod.config.js",
     "start": "node servers/DevelopmentServer/DevelopmentServer.js",
@@ -24,6 +29,7 @@
     "browser-cookies": "^1.1.0",
     "client-request": "^2.0.0",
     "css-loader": "^0.28.4",
+    "d3-geo": "^1.9.1",
     "domready": "^1.0.8",
     "dot-env": "0.0.1",
     "dotenv": "^4.0.0",
@@ -49,6 +55,7 @@
     "sass-loader": "^6.0.6",
     "should": "^11.2.1",
     "style-loader": "^0.18.2",
+    "topojson-client": "^3.0.0",
     "webpack": "^3.4.1",
     "webpack-dev-middleware": "^1.12.0",
     "webpack-dev-server": "^2.6.1",
@@ -59,6 +66,7 @@
     "babel-preset-stage-2": "^6.24.1",
     "chai": "^4.1.2",
     "csv-parse": "^2.0.0",
+    "d3-geo-projection": "^2.3.2",
     "enzyme": "^3.2.0",
     "enzyme-adapter-react-16": "^1.1.0",
     "eslint": "^4.15.0",
@@ -70,6 +78,9 @@
     "mocha": "^4.0.1",
     "mocha-webpack": "^1.0.1",
     "react-test-renderer": "^16.1.1",
-    "simple-statistics": "^0.9.2"
+    "shapefile": "^0.6.6",
+    "simple-statistics": "^0.9.2",
+    "topojson-server": "^3.0.0",
+    "topojson-simplify": "^3.0.2"
   }
 }
