--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "query-string": "^5.0.0",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
-    "react-hot-loader": "^3.1.3",
+    "react-hot-loader": "^4.0.0-beta.22",
     "react-redux": "^5.0.5",
     "redux": "^3.7.2",
     "reselect": "^3.0.1",
