--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "lodash": "^4.17.4",
     "lzutf8": "^0.4.7",
     "memoize-immutable": "^3.0.0",
+    "modernizr": "^3.6.0",
+    "modernizr-loader": "^1.0.1",
     "mustache": "^2.3.0",
     "mustache-express": "^1.2.5",
     "node-sass": "^4.5.3",
