--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build:portmap:toposimplify": "toposimplify -n -S 1e-3 -F ./srcData/geo2topo.json -o ./srcData/toposimplify.json",
     "build:portmap:topoquantize": "topoquantize -n -o ./srcData/topoquantize.json 1e3 ./srcData/toposimplify.json",
     "build:portmap": "npm run build:portmap:shp2json && npm run build:portmap:geo2topo && npm run build:portmap:toposimplify && npm run build:portmap:topoquantize && cp ./srcData/topoquantize.json ./public/data/topo.json",
-    "test": "mocha-webpack --watch --recursive ./test/",
+    "test": "mocha --require babel-register --watch --recursive ./test/",
     "webpack": "webpack --config webpack.prod.config.js",
     "start": "babel-node servers/DevelopmentServer/DevelopmentServer.js",
     "lint": "eslint --ext .jsx,.js app/**",
@@ -28,7 +28,9 @@
     "babel-preset-react": "^6.24.1",
     "bluebird": "^3.5.0",
     "browser-cookies": "^1.1.0",
+    "chai": "^4.1.2",
     "client-request": "^2.3.0",
+    "codecov": "^3.0.2",
     "css-loader": "^0.28.4",
     "d3-geo": "^1.9.1",
     "dialog-polyfill": "^0.4.9",
@@ -73,19 +75,21 @@
     "chai": "^4.1.2",
     "csv-parse": "^2.0.0",
     "d3-geo-projection": "^2.3.2",
-    "enzyme": "^3.2.0",
-    "enzyme-adapter-react-16": "^1.1.0",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
     "eslint": "^4.15.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.5.1",
     "fs-extra": "^5.0.0",
-    "mocha": "^4.0.1",
-    "mocha-webpack": "^1.0.1",
+    "mocha": "^5.1.1",
+    "mocha-webpack": "^1.1.0",
+    "nyc": "^11.7.3",
     "react-test-renderer": "^16.1.1",
     "shapefile": "^0.6.6",
     "simple-statistics": "^5.2.1",
+    "sinon": "^5.0.7",
     "topojson-server": "^3.0.0",
     "topojson-simplify": "^3.0.2"
   }
