--- a/package.json
+++ b/package.json
@@ -53,9 +53,9 @@
     "prop-types": "^15.6.0",
     "query-string": "^5.0.0",
     "re-reselect": "^2.0.0",
-    "react": "^16.1.1",
-    "react-dom": "^16.1.1",
-    "react-hot-loader": "^4.0.0-beta.22",
+    "react": "^16.3.2",
+    "react-dom": "^16.3.2",
+    "react-hot-loader": "^4.2.0",
     "react-redux": "^5.0.5",
     "redux": "^3.7.2",
     "reselect": "^3.0.1",
